--- a/index.html
+++ b/index.html
@@ -22,11 +22,110 @@
         <h5 class="mt-3">Bài 1: Đổi màu ngôi nhà</h5>
         <div class="house-contents">
           <div id="house" class="house violet"></div>
-          <div id="color-list" class="color-list mt-5"></div>
+          <h6 class="mt-5">Mời chọn màu:</h6>
+          <div id="color-list" class="color-list"></div>
         </div>
       </div>
       <!-- Ex2: Calc scores -->
-      <h5 class="mt-3">Ex 2: Calc Scores</h5>
+      <h5 class="mt-5 mb-3">Bài 2: Tính điểm trung bình</h5>
+      <div class="score-contents row">
+        <div class="score score-1 col-4">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Toán</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputToan"
+              placeholder="Nhập điểm Toán"
+              aria-label="Nhập điểm Toán"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Lý</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputLy"
+              placeholder="Nhập điểm Lý"
+              aria-label="Nhập điểm Lý"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Hóa</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputHoa"
+              placeholder="Nhập điểm Hóa"
+              aria-label="Nhập điểm Hóa"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <button
+            id="calc-score1"
+            class="btn btn-success"
+          >
+            Tính
+          </button>
+          <p id="result-score-1" class="alert alert-success mt-3"></p>
+        </div>
+        <div class="score score-2 col-4">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Văn</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputVan"
+              placeholder="Nhập điểm Văn"
+              aria-label="Nhập điểm Văn"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Sử</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputSu"
+              placeholder="Nhập điểm Sử"
+              aria-label="Nhập điểm Sử"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Địa</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputDia"
+              placeholder="Nhập điểm Địa"
+              aria-label="Nhập điểm Địa"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+          <button
+            id="calc-score2"
+            class="btn btn-success"
+          >
+            Tính
+          </button>
+          <p id="result-score-2" class="alert alert-success mt-3"></p>
+        </div>
+      </div>
     </div>
 
     <!-- BS 4.6 -->
